--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,31 @@
 
 /*lite grundregler/globala*/
 body {
-	font-family: 'Arvo';
+	font-family: Arial, Helvetica, sans-serif;
+    text-transform: lowercase;
     font-size: 22px;
 	line-height: 1.4;
 	background-color: white;
 	color: black;
     margin: 0px;
 	}
+h1 {
+	font-family: 'Arvo';
+    text-transform: lowercase;
+    font-size: 40px;
+	line-height: 1.4;
+	background-color: white;
+	color: black;
+    margin: 0px;
+	}
+h2 {
+    font-family: 'Arvo';
+    text-transform: lowercase;
+    font-size: 22px;
+	line-height: 1.4;
+	color: black;
+    margin: 0px;
+}
 .logo {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -41,6 +59,7 @@ ul li {
   border-right: 5px solid white;
   text-align: center;
   width: 25%;
+  font-family: 'Arvo';
 }
 
 ul li:last-child {
@@ -66,7 +85,12 @@ background-color: darkgrey;
   
 }
 .subheader {
-    font-size: 1.6em;
+    font-family: 'Arvo';
+    text-transform: lowercase;
+    font-size: 30px;
+	line-height: 1.4;
+	color: black;
+    margin: 0px;
     margin: 5px;
     padding: 30px;
     text-align: left;
@@ -96,8 +120,22 @@ background-color: darkgrey;
 .blog {
     margin: 5px;
     padding: 10px;
+    padding-bottom: 20px;
     background-color: lightgray;
+    font-size: 0.5em;
+    text-align: left;
 
+
+}
+
+
+    
+.blog img {
+    width: 40%;
+    height: auto;
+    border-radius: 8px;
+        float: left;
+    margin: 0 1rem 1rem 0;
 }
 .blog a {
     text-decoration: none;
@@ -111,9 +149,7 @@ background-color: darkgrey;
 .blog h2{
     padding-bottom: 10px;
 }
-.blog p{
-    text-align: right;
-}
+
 
 .divshop {
     display: grid;
@@ -126,29 +162,37 @@ background-color: darkgrey;
 }
 .shop {
     display: grid;
-    border: none;
+    border: 1px solid darkgray;
+    border-radius: 10px;
     grid-template-columns: repeat(2, 1fr);
     margin: 0px;
     width: auto;
-    padding: 5px;
+    padding: 0%;
     background-color: lightgray;
     
 }
 .shop img{
     grid-column: 1/ span 3;
+    border-top-left-radius:  10px;
+    border-top-right-radius: 10px;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 
 .shop a {
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
     grid-column: 1/ span 3;
-}
+    padding-right: 5px;
+    font-size: 0.7em;
+    text-align: right;
 }
 
+
 .shop a:visited {
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
 }
 .shop h2{
@@ -156,15 +200,60 @@ background-color: darkgrey;
 }
 .price{
     text-align: right;
+    color: rgb(85, 84, 84);
+    padding-right: 2px;
+    padding-bottom: 2px;
 }
+
 
 .item {
+    font-family: 'Arvo';
     text-align: left;
+    font-size: 0.8em;
+    padding-left: 2px;
 }
 
+.concert {
+    display: grid;
+    grid-template-columns: auto auto;
+    background-color: lightgray;
+    padding: 5px;
+    margin: 5px;
+}
 
-/*satte grundregler för hur sidfoten ska se ut */
+.concert-location{
+    font-family: 'Arvo';
+    font-size: 1em;
+    text-align: left;
+}
+.concert-date {
+    font-size: 0.6em;
+    text-align: right;
+    padding-top: 5px;
+}
+.concert-venue {
+    grid-column: 1/ span 2;
+    font-family: 'Arvo';
+}
+.concert-phone {
+    font-size: 0.6em;
+}
+.concert-website{
+    text-align: right;
+    font-size: 0.6em;
+}
 
+.concert-website a {
+    text-decoration: underline;
+    color: black;
+
+    
+}
+
+.concert-website a:visited {
+    text-decoration: none;
+    color: black;
+}
 footer {
 	background-color: lightgray;
     margin: 5px;
