--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 * {
 	box-sizing: border-box;
     border-radius: 5px;
-	margin: 0;
+	margin: 5px;
 	padding: 0;
 
 }
@@ -11,7 +11,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
     text-transform: lowercase;
-    font-size: 22px;
+    font-size: 15px;
 	line-height: 1.4;
 	background-color: white;
 	color: black;
@@ -24,7 +24,8 @@ h1 {
 	line-height: 1.4;
 	background-color: white;
 	color: black;
-    margin: 0px;
+    margin: 0;
+    
 	}
 h2 {
     font-family: 'Arvo';
@@ -32,39 +33,43 @@ h2 {
     font-size: 22px;
 	line-height: 1.4;
 	color: black;
-    margin: 0px;
+   
 }
 .logo {
     padding-top: 70px;
     padding-bottom: 70px;
     background-color: lightgray;
     text-align: center;
-    margin: 5px;
     width: auto;
 }
-
+nav {
+    margin: 0;
+}
 ul {
   list-style-type: none;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+    margin: 0;
+    margin-top: 5px;
   padding: 0;
   overflow: hidden;
-  background-color: lightgray;
-  display: flex;
+   display: flex;
   justify-content: center;
   width: auto;
 }
 ul li {
   float: left;
-  border-right: 5px solid white;
+  margin: 0;
+  margin-right: 5px;
+  border-right: 0px solid white;
+  background-color: lightgray;
   text-align: center;
   width: 25%;
   font-family: 'Arvo';
 }
 
 ul li:last-child {
-  border-right: none;
+    margin-right: 0;
+    border: 0;
+  
 }
 
 
@@ -86,6 +91,10 @@ color: black;
 background-color: darkgrey;
   
 }
+main {
+    margin: 0;
+    border: 0;
+}
 .subheader {
     font-family: 'Arvo';
     text-transform: lowercase;
@@ -97,10 +106,13 @@ background-color: darkgrey;
     padding: 30px;
     text-align: left;
 }
-
+.divright {
+    margin: 0;
+}
 .article {
-    margin: 5px;
+    margin: 0px;
     padding: 10px;
+    border: 0;
     background-color: lightgray;
 
 }
@@ -119,12 +131,21 @@ background-color: darkgrey;
 .article p{
     text-align: right;
 }
+.about{
+    display: none;
+}
+.blogintro {
+    display: none;
+}
+.concertstext{
+    display: none;
+}
 .blog {
     margin: 5px;
     padding: 10px;
     padding-bottom: 20px;
     background-color: lightgray;
-    font-size: 0.5em;
+    font-size: 1em;
     text-align: left;
 
 
@@ -219,30 +240,31 @@ background-color: darkgrey;
     display: grid;
     grid-template-columns: auto auto;
     background-color: lightgray;
-    padding: 5px;
+    padding: 10px;
     margin: 5px;
 }
 
 .concert-location{
     font-family: 'Arvo';
-    font-size: 1em;
+    font-size: 1.5em;
     text-align: left;
 }
 .concert-date {
-    font-size: 0.6em;
+    font-size: 1em;
     text-align: right;
     padding-top: 5px;
 }
 .concert-venue {
     grid-column: 1/ span 2;
     font-family: 'Arvo';
+    font-size: 2em;
 }
 .concert-phone {
-    font-size: 0.6em;
+    font-size: 1em;
 }
 .concert-website{
     text-align: right;
-    font-size: 0.6em;
+    font-size: 1em;
 }
 
 .concert-website a {
@@ -250,6 +272,9 @@ background-color: darkgrey;
     color: black;
 
     
+}
+.concert-list{
+    margin: 0;
 }
 
 .concert-website a:visited {
@@ -260,10 +285,10 @@ footer {
 	background-color: lightgray;
     margin: 5px;
     text-align: center;
-	padding: 10px;
+	
 	line-height: 2;
-    font-size: 0.5em;
-     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -275,7 +300,7 @@ footer {
 	}
     header{
         margin: 0 auto;
-        padding: 0 5px;
+        padding: 0 ;
         max-width: 1000px;
         
     }
@@ -284,13 +309,13 @@ footer {
     }
     main {
         margin: 0 auto;
-        padding: 0 5px;
+        padding: 0;
         max-width: 1000px;
         
     }
     footer{
-        margin: 0 auto;
-        padding: 0 5px;
+        margin: 10px auto;
+        padding: 10px;
         max-width: 1000px;
     }
    nav {
@@ -327,122 +352,174 @@ ul li a:active{
 	.startmain {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-		
-		margin: 0 auto;
-        padding: 0 5px;
+		gap: 5px;
+        margin: 0 auto;
+        margin-top: 5px;
+        padding: 0;
         max-width: 1000px;
 	  		}
 
 .article {
-    padding: 5px;
-    margin: 5px;
+    padding: 10px;
+    margin: 0px;
+    padding-top: 50px;
     background-color: lightgray;
-}            
+}       
+
+.article p{
+    padding-top: 40px;
+}     
     h2 {
  
     font-family: 'Arvo';
     text-transform: lowercase;
-    font-size: 22px;
-    padding: 20px;
+    font-size: 30px;
+    padding: 30px;
 	line-height: 1.4;
 	color: black;
     margin: 0px;
+    }
+    .about{
+        display: block ;
+        background-color: rgb(235, 235, 235);
+        padding: 10px;
+        padding-top: 50px;
+        margin: 0px;
+    }
+    .about p{
+        text-align: end;
+        padding: 30px;
+        padding-top: 40px;
+    }
+
+.divright {
+    margin: 0 auto;
+    margin-top: 5px;
+    padding: 0;
+    max-width: 1000px;
+   
+ 
+    
+    
+}
 
 
-	/*samma här, grid i en grid.*/
-	.images {
-		grid-area: images;
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		gap: 1rem;
-		width: 100%;
-	}
+.blogpage{
+    
+   margin-right: 0px;
+    margin-left: auto;
+    padding: 0 5px;
+    max-width: 85%;
+    background-color: lightgray;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
 
-	/*här sätter jag reglerna för mina bilder */
-	.images img {
-		width: 50%;
-		aspect-ratio: 1/1;
-		object-fit: cover;
-		object-position: center;
-		border-radius: 35px;
-		display: block;
-		margin: 0 auto;
-	}
+    
+}
+.blogintro{
+    display: block;
+     font-family: 'Arvo';
+    text-transform: lowercase;
+    font-size: 30px;
+    padding: 30px;
 
-	/*nya reglar för denna klass*/
-	.about-us {
-		grid-area: header;
-		padding: 3rem;
-		margin: 2rem;
-		margin-top: 5rem;
-		margin-left: 0;
-	}
+}
+.blog{
+    width: 70%;
+    
+    margin-right: 0;
+    margin-left: auto;
+    background-color: white;
+}
 
-	.about-us h1 {
-		margin-bottom: 1rem;
-		letter-spacing: -2px;
+.divshop {
+    display: grid;
+    border: none;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    width: auto;
+    padding: 0;
+    margin: 0;
+    margin-top: 5px;
+}
+.shop {
+    display: grid;
+    border: none;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0px;
+    width: auto;
+    padding: 0%;
+    background-color: lightgray;
+    
+}
+.shop img{
+    grid-column: 1/ span 3;
+    border-top-left-radius:  5px;
+    border-top-right-radius: 5px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 
-	}
 
-	/*nya reglar för denna klass*/
-	.general-information {
-		grid-area: general;
-		display: block;
-		background-color: #007BFF;
-		color: #ffffff;
-		text-decoration: none;
-		line-height: 1.4;
-		font-size: 1em;
-		font-weight: lighter;
-		font-style: normal;
-		padding: 2rem 2rem 2rem 5rem;
-		margin: 0rem;
-        margin-bottom: 2rem;
-		
-		border-bottom-left-radius: 70px;
+.shop a {
+    text-decoration: underline;
+    color: black;
+    grid-column: 1/ span 3;
+    padding: 5px;
+    padding-right: 10px;
+    font-size: 1em;
+    text-align: right;
+}
 
-	}
 
-	/*nya regler för denna klass med rubrik och lista*/
-	.general-information li {
-		font-size: 1em;
-		line-height: 1.4;
-		list-style: none;
-		margin: 0.5rem 0;
-		font-weight: lighter;
-		font-style: normal;
-		padding: 1%;
-	}
+.shop a:visited {
+    text-decoration: underline;
+    color: black;
+}
 
-	.general-information h2 {
-		color: #ffffff;
-		text-decoration: none;
-		margin-bottom: 5%;
-		line-height: 1.4;
-		font-size: 1em;
-		font-weight: lighter;
-		font-style: normal;
-		padding: 1%;
-	}
+.price{
+    text-align: right;
+    color: black;
+    padding: 5px;
+    padding-right: 10px;
+}
 
-	/*nya regler för denna klass med rubrik och lista*/
-	.specific-information {
-		grid-area: specifics;
-		padding: 4rem;
-		margin: 2rem;
-		margin-left: 0;
-		margin-right: 25rem;
-	}
 
-	.specific-information li {
-		margin: 0.5rem 0;
-		padding: 0%;
-		font-size: 0.9em;
-		line-height: 1.4;
-		list-style: none;
-		margin: ;
-		font-weight: lighter;
-	}
+.item {
+    font-family: 'Arvo';
+    text-align: left;
+    font-size: 1.6em;
+    padding: 5px;
+    padding-left: 10px;
+}
+.concertsmain{
+    margin: 0 auto;
+    padding: 0;
+    max-width: 1000px;
+    display: grid;
+    grid-template-columns: 30% 1fr;
+
+}
+.concertstext{
+    display: block;
+    font-family: 'Arvo';
+    text-transform: lowercase;
+    font-size: 40px;
+    padding: 30px;
+    padding-top: 70px;
+    margin: 0;
+
+}
+.concert-list {
+    margin: 0;
+    padding: 0;
+}
+.concert{
+    margin: 0;
+    margin-top: 5px;
+}
 
 
 }
