--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ h2 {
 
 h3{
   padding-bottom: 10px;
+  
 }
 /*här sätter jag regler för hur logan ska se ut, även om den är i text*/
 .logo {
@@ -183,7 +184,7 @@ main {
 .shop {
   display: grid;
   border: 1px solid darkgray;
-  border-radius: 10px;
+  border-radius: 5px;
   grid-template-columns: repeat(2, 1fr);
   margin: 0px;
   width: auto;
@@ -192,8 +193,9 @@ main {
 }
 .shop img {
   grid-column: 1 / span 3;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -204,8 +206,8 @@ main {
   color: black;
   grid-column: 1 / span 3;
   padding-right: 5px;
-  font-size: 0.7em;
-  text-align: right;
+  font-size: 1em;
+  text-align: center;
 }
 
 .shop a:visited {
@@ -218,15 +220,16 @@ main {
 .price {
   text-align: right;
   color: rgb(85, 84, 84);
-  padding-right: 2px;
-  padding-bottom: 2px;
+  padding: 2px;
+  font-size: 1.2em;
 }
 
 .item {
   font-family: "Arvo";
   text-align: left;
-  font-size: 1em;
-  padding-left: 2px;
+  font-size: 1.2em;
+  padding: 2px;
+  
 }
 /*här börjar jag koda specifikt för konsertsidan */
 .concert {
@@ -244,14 +247,16 @@ main {
   text-align: left;
 }
 .concert-date {
+  
   font-size: 1em;
   text-align: right;
-  padding-top: 5px;
+  
 }
 .concert-venue {
   grid-column: 1 / span 2;
   font-family: "Arvo";
   font-size: 2em;
+  padding: 10px;
 }
 .concert-phone {
   font-size: 1em;
@@ -383,7 +388,7 @@ footer {
     margin: 0px;
   }
   .about p {
-    text-align: end;
+    text-align: right;
     padding-top: 25px;
   }
 /*blogg sidan anpassas den med. här får vå två förskutningar*/
@@ -471,6 +476,7 @@ footer {
     color: black;
     padding: 5px;
     padding-right: 10px;
+    margin: 0;
   }
 
   .item {
@@ -479,6 +485,7 @@ footer {
     font-size: 1.6em;
     padding: 5px;
     padding-left: 10px;
+    margin: 0;
   }
 
   /*konsertsidan den får ochså den anpassningar samt att dolda textfelt plockas fram*/
