--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 * {
   box-sizing: border-box;
   border-radius: 5px;
-  margin: 5px;
+  margin: 0px;
   padding: 0;
 }
 
@@ -15,6 +15,7 @@ body {
   background-color: white;
   color: black;
   margin: 0px;
+  padding: 5px;
 }
 
 h1 {
@@ -32,7 +33,8 @@ h2 {
   font-size: 22px;
   line-height: 1.4;
   color: black;
-  padding-bottom: 10px;
+  padding: 20px;
+  padding-bottom: 40px;
 }
 
 h3{
@@ -91,7 +93,7 @@ ul li a:active {
 
 /*nu börjar utseendet på huvidsidan avklaras*/
 main {
-  margin: 0;
+  margin: 5;
   border: 0;
 }
 .subheader {
@@ -102,7 +104,7 @@ main {
   color: black;
   margin: 0px;
   margin: 5px;
-  padding: 30px;
+  padding: 40px;
   text-align: left;
 }
 /*för att kunna förskuta innehållet skapar jag en placeholder, och här beslutar jag hur det ska sitta ihop. detta är för bloggen*/
@@ -110,7 +112,8 @@ main {
   margin: 0;
 }
 .article {
-  margin: 5px;
+  margin: 0px;
+  margin-top: 5px;
   padding: 10px;
   border: 0;
   background-color: lightgray;
@@ -146,7 +149,8 @@ main {
   display: none;
 }
 .blog {
-  margin: 5px;
+  margin: 0px;
+  margin-bottom: 5px;
   padding: 10px;
   padding-bottom: 20px;
   background-color: lightgray;
@@ -179,7 +183,7 @@ main {
   gap: 5px;
   width: auto;
   padding: 0;
-  margin: 5px;
+  
 }
 .shop {
   display: grid;
@@ -220,7 +224,7 @@ main {
 .price {
   text-align: right;
   color: rgb(85, 84, 84);
-  padding: 2px;
+  padding-right: 5px;
   font-size: 1.2em;
 }
 
@@ -228,7 +232,7 @@ main {
   font-family: "Arvo";
   text-align: left;
   font-size: 1.2em;
-  padding: 2px;
+  padding-left: 5px;
   
 }
 /*här börjar jag koda specifikt för konsertsidan */
@@ -237,7 +241,6 @@ main {
   grid-template-columns: auto auto;
   background-color: lightgray;
   padding: 10px;
-  margin: 5px;
   margin-bottom: 5px;
 }
 
@@ -256,7 +259,7 @@ main {
   grid-column: 1 / span 2;
   font-family: "Arvo";
   font-size: 2em;
-  padding: 10px;
+  padding: 20px;
 }
 .concert-phone {
   font-size: 1em;
@@ -282,18 +285,18 @@ main {
 }
 footer {
   background-color: lightgray;
-  margin: 5px;
+  margin-top: 5px;
   text-align: center;
 
   line-height: 2;
-  font-size: 1em;
-  font-family: Arial, Helvetica, sans-serif;
+  
+ 
 }
 /*här börjar jag koda specifikt för desktop*/
 
 @media (min-width: 600px) {
   body {
-    margin: 0;
+ 
     background-color: white;
   }
   header {
@@ -303,7 +306,14 @@ footer {
   }
   header h1 {
     font-size: 70px;
+    
+
   }
+    .logo {
+    padding-top: 100px;
+    padding-bottom: 90px;
+
+    }
   main {
     margin: 0 auto;
     padding: 0;
@@ -311,7 +321,7 @@ footer {
   }
   /*sid foten får ett nytt utseende*/
   footer {
-    margin: 10px auto;
+    margin: 5px auto;
     padding: 10px;
     max-width: 1000px;
   }
@@ -329,10 +339,10 @@ footer {
   ul li {
     float: right;
     display: block;
-
     text-align: center;
     width: 25%;
     font-family: "Arvo";
+    font-size: larger;
   }
 
   ul li a:hover:not(.highligt) {
@@ -360,7 +370,7 @@ footer {
 
   .article {
     display: block;
-    padding: 10px;
+    padding: 20px;
     margin: 0px;
     padding-top: 50px;
     background-color: lightgray;
@@ -383,8 +393,8 @@ footer {
   .about {
     display: block;
     background-color: rgb(235, 235, 235);
-    padding: 10px;
-    padding-top: 70px;
+    padding: 20px;
+    padding-top: 50px;
     margin: 0px;
   }
   .about p {
@@ -401,6 +411,7 @@ footer {
   }
 
   .blogpage {
+    margin: 0;
     margin-right: 0px;
     margin-left: auto;
     padding: 0 5px;
@@ -410,6 +421,9 @@ footer {
     justify-content: flex-end;
     flex-direction: column;
   }
+    section {
+    margin: 0;
+    }
   /*ett tidigar dolt textblock plockas fram*/
   .blogintro {
     display: block;
