--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 h1 {
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   text-transform: lowercase;
   font-size: 40px;
   line-height: 1.4;
@@ -28,7 +28,7 @@ h1 {
   margin: 0;
 }
 h2 {
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   text-transform: lowercase;
   font-size: 22px;
   line-height: 1.4;
@@ -72,7 +72,7 @@ ul li {
   background-color: lightgray;
   text-align: center;
   width: 25%;
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
 }
 
 ul li a {
@@ -97,7 +97,7 @@ main {
   border: 0;
 }
 .subheader {
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   text-transform: lowercase;
   font-size: 30px;
   line-height: 1.4;
@@ -229,7 +229,7 @@ main {
 }
 
 .item {
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   text-align: left;
   font-size: 1.2em;
   padding-left: 5px;
@@ -245,7 +245,7 @@ main {
 }
 
 .concert-location {
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   font-size: 1.5em;
   text-align: left;
 }
@@ -257,7 +257,7 @@ main {
 }
 .concert-venue {
   grid-column: 1 / span 2;
-  font-family: "Arvo";
+  font-family: "Arvo", sans-serif;
   font-size: 2em;
   padding: 20px;
 }
@@ -341,7 +341,7 @@ footer {
     display: block;
     text-align: center;
     width: 25%;
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     font-size: larger;
   }
 
@@ -384,7 +384,7 @@ footer {
     margin: 0;
   }
   h2 {
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     text-transform: lowercase;
     font-size: 30px;
     padding: 30px;
@@ -427,7 +427,7 @@ footer {
   /*ett tidigar dolt textblock plockas fram*/
   .blogintro {
     display: block;
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     text-transform: lowercase;
     font-size: 30px;
     padding: 50px;
@@ -485,7 +485,7 @@ footer {
 
   .price {
     text-align: right;
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     font-size: 1.6em;
     color: black;
     padding: 5px;
@@ -494,7 +494,7 @@ footer {
   }
 
   .item {
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     text-align: left;
     font-size: 1.6em;
     padding: 5px;
@@ -516,7 +516,7 @@ footer {
     display: block;
     position: sticky;
     top: 0;
-    font-family: "Arvo";
+    font-family: "Arvo", sans-serif;
     text-transform: lowercase;
     font-size: 40px;
     padding: 30px;
